# WakumiHMS

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Ultralight/: LOG.txt
Ultralight/include/Ultralight/: CAPI.h
Ultralight/samples/: CMakeLists.txt
assets/client/: index.html  settings.html  styles.css
assets/client/assets/animated-progress-circle/: jQuery.circleProgressBar.js  jQuery.circleProgressBar.min.js
assets/client/assets/js/: CanvasViewport.js  EventLogger.js  ui.js
src/client/: GlobalInfo.cpp  GlobalInfo.h  UIElements.h  WakumiHMSclient.cpp
src/server/: WakumiHMSserver.cpp  WakumiHMSserver.h
